--- a/src/components/button.css
+++ b/src/components/button.css
@@ -4,19 +4,19 @@
   /* Specefic to the use of style */
   @apply h-12 gap-2 rounded-lg border-2 border-transparent px-6 text-base font-medium focus:outline-none focus-visible:ring-2 focus-visible:ring-offset-2;
   /* all aspects of colour */
-  @apply bg-primary-600 text-whitely-50 hover:bg-primary-500 hover:text-primary-50 hover:shadow-button hover:shadow-primary-100 focus-visible:ring-primary-200;
+  @apply bg-primary-600 text-whitely-50 hover:bg-primary-500 hover:text-primary-50 hover:shadow-button hover:shadow-primary-100 focus-visible:ring-primary-support-300;
   @apply disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-30 disabled:!shadow-none;
 
   /* Style */
   &.btn-soft {
-    @apply bg-primary-50 hover:bg-primary-100 text-primary-700 hover:text-primary-600 focus-visible:ring-primary-800 hover:shadow-none focus-visible:ring-offset-0;
+    @apply bg-primary-50 hover:bg-primary-100 text-primary-700 hover:text-primary-600 focus-visible:ring-primary-support-400 hover:shadow-none focus-visible:ring-offset-0;
     @apply disabled:opacity-50;
   }
   &.btn-link {
-    @apply text-primary-600 hover:bg-primary-50 focus-visible:ring-primary-500 focus-visible:border-primary-500 bg-transparent hover:shadow-none focus-visible:ring-1 focus-visible:ring-offset-0;
+    @apply text-primary-600 hover:bg-primary-50 focus-visible:ring-primary-500 focus-visible:border-primary-support-300 bg-transparent hover:shadow-none focus-visible:ring-1 focus-visible:ring-offset-0;
   }
   &.btn-outline {
-    @apply text-primary-600 hover:bg-primary-100 border-primary-600 focus-visible:ring-primary-500 focus-visible:border-primary-500 bg-transparent hover:shadow-none focus-visible:ring-1 focus-visible:ring-offset-0;
+    @apply text-primary-600 hover:bg-primary-50 border-primary-600 focus-visible:border-primary-support-400 focus-visible:ring-primary-support-400 bg-transparent hover:shadow-none focus-visible:ring-1 focus-visible:ring-offset-0;
   }
 
   /* Sizing */
@@ -156,19 +156,19 @@
 
   /* Secondary */
   &.btn-secondary {
-    @apply bg-secondary-800 text-secondary-50 hover:bg-secondary-950 hover:text-secondary-100 hover:shadow-secondary-100 focus-visible:ring-secondary-200;
+    @apply bg-secondary-800 text-secondary-50 hover:bg-secondary-950 hover:text-secondary-100 hover:shadow-secondary-100 focus-visible:ring-secondary-support-300;
 
     &.btn-soft {
-      @apply bg-secondary-50 hover:bg-secondary-100 text-secondary-800 hover:text-secondary-800 focus-visible:ring-secondary-200 hover:shadow-none focus-visible:ring-offset-0;
+      @apply bg-secondary-50 hover:bg-secondary-100 text-secondary-800 hover:text-secondary-800 hover:shadow-none focus-visible:ring-offset-0;
       @apply disabled:opacity-50;
     }
 
     &.btn-link {
-      @apply text-secondary-800 hover:bg-secondary-50 focus-visible:ring-secondary-200 focus-visible:border-secondary-200 bg-transparent hover:shadow-none focus-visible:ring-1 focus-visible:ring-offset-0;
+      @apply text-secondary-800 hover:bg-secondary-50 focus-visible:border-secondary-support-300 bg-transparent hover:shadow-none focus-visible:ring-1 focus-visible:ring-offset-0;
     }
 
     &.btn-outline {
-      @apply text-secondary-800 hover:bg-secondary-100 border-secondary-800 focus-visible:ring-secondary-200 focus-visible:border-secondary-200 bg-transparent hover:shadow-none focus-visible:ring-1 focus-visible:ring-offset-0;
+      @apply text-secondary-800 hover:bg-secondary-100 border-secondary-800 focus-visible:border-secondary-support-300 bg-transparent hover:shadow-none focus-visible:ring-1 focus-visible:ring-offset-0;
     }
   }
 }
