--- a/src/components/accordion.css
+++ b/src/components/accordion.css
@@ -16,7 +16,7 @@
   &:not(.aegov-mobile-accordion) {
     & .accordion-title {
       & button {
-        @apply focus-visible:ring-primary-100 px-3 py-4 focus-visible:outline-none focus-visible:ring-2 md:py-5 xl:py-6;
+        @apply focus-visible:ring-primary-support-400 px-3 py-4 focus-visible:outline-none focus-visible:ring-2 md:py-5 xl:py-6;
       }
     }
     & .accordion-content {
