--- a/src/components/button.css
+++ b/src/components/button.css
@@ -13,7 +13,7 @@
     @apply disabled:opacity-50;
   }
   &.btn-link {
-    @apply text-primary-600 hover:bg-primary-50 focus-visible:ring-primary-500 focus-visible:border-primary-support-300 bg-transparent hover:shadow-none focus-visible:ring-1 focus-visible:ring-offset-0;
+    @apply text-primary-600 hover:bg-primary-50 focus-visible:ring-primary-support-400 focus-visible:border-primary-support-400 bg-transparent hover:shadow-none focus-visible:ring-1 focus-visible:ring-offset-0;
   }
   &.btn-outline {
     @apply text-primary-600 hover:bg-primary-50 border-primary-600 focus-visible:border-primary-support-400 focus-visible:ring-primary-support-400 bg-transparent hover:shadow-none focus-visible:ring-1 focus-visible:ring-offset-0;
