--- a/src/components/form-input.css
+++ b/src/components/form-input.css
@@ -39,7 +39,7 @@ input[type="file"] {
   }
   @apply w-full !py-0 overflow-hidden border-0 outline-none motion-reduce:transition-none;
   @apply file:text-primary-700 file:bg-primary-50 file:me-4 file:h-full file:bg-transparent file:px-4;
-  @apply file:focus:shadow-primary-400/20 file:ring-primary-300 file:focus-within:ring-primary-600 focus:outline-primary-500 file:rounded-s file:border-0 file:py-3 file:ring-1 file:ring-inset file:focus-within:ring-2 file:focus-within:ring-inset file:focus:z-10;
+  @apply file:focus:shadow-primary-support-400/20 file:ring-primary-300 file:focus-within:ring-primary-support-400 focus:outline-primary-500 file:rounded-s file:border-0 file:py-3 file:ring-1 file:ring-inset file:focus-within:ring-2 file:focus-within:ring-inset file:focus:z-10;
   &:hover:not(:disabled):not([readonly])::file-selector-button {
     @apply bg-primary-100;
   }
@@ -49,7 +49,7 @@ input[type="file"] {
     @apply text-aeblack-800 mb-1 block text-sm font-medium leading-6;
   }
   & .form-control-input {
-    @apply bg-whitely-50 ring-primary-400 focus-within:ring-primary-600 relative flex rounded-md shadow-sm ring-1 ring-inset focus-within:ring-2 focus-within:ring-inset focus:shadow-md;
+    @apply bg-whitely-50 ring-primary-400 focus-within:ring-primary-support-400 relative flex rounded-md shadow-sm ring-1 ring-inset focus-within:ring-2 focus-within:ring-inset focus:shadow-md;
     & .control-prefix,
     & .control-suffix {
       @apply text-aeblack-300 flex select-none items-center;
@@ -83,7 +83,7 @@ input[type="file"] {
       & + .control-suffix {
         @apply pointer-events-none absolute right-3.5 top-2/4 -translate-y-2/4 appearance-none bg-inherit pe-0;
         & svg {
-          @apply focus-within:ring-primary-600 focus-within:ring-2 focus-within:ring-inset;
+          @apply focus-within:ring-primary-support-400 focus-within:ring-2 focus-within:ring-inset;
         }
       }
     }
@@ -190,7 +190,7 @@ input[type="file"] {
       @apply mx-auto h-10 w-10 text-slate-300 xl:h-12 xl:w-12;
     }
     & label {
-      @apply bg-whitely-50 text-primary-600 focus-within:ring-primary-600 hover:text-primary-500 relative inline-block cursor-pointer rounded-md font-semibold focus-within:outline-none focus-within:ring-2 focus-within:ring-offset-2;
+      @apply bg-whitely-50 text-primary-600 focus-within:ring-primary-support-400 hover:text-primary-500 relative inline-block cursor-pointer rounded-md font-semibold focus-within:outline-none focus-within:ring-2 focus-within:ring-offset-2;
     }
   }
 }
@@ -198,13 +198,13 @@ input[type="file"] {
 .aegov-form-control {
   &.control-secondary{
     & .form-control-input {
-      @apply bg-whitely-50 ring-secondary-400 focus-within:ring-secondary-600;
+      @apply bg-whitely-50 ring-secondary-400 focus-within:ring-secondary-support-300;
       & input[type="date"],
       input[type="datetime-local"],
       input[type="month"] {
         & + .control-suffix {
           & svg {
-            @apply focus-within:ring-secondary-600;
+            @apply focus-within:ring-secondary-support-300;
           }
         }
       }
@@ -228,7 +228,7 @@ input[type="file"] {
         @apply text-slate-300;
       }
       & label {
-        @apply bg-whitely-50 text-secondary-600 focus-within:ring-secondary-600 hover:text-secondary-500;
+        @apply bg-whitely-50 text-secondary-600 focus-within:ring-secondary-support-300 hover:text-secondary-500;
       }
     }
     
@@ -247,7 +247,7 @@ input[type="file"] {
     input[type="file"] {
       
       @apply file:text-secondary-700 file:bg-secondary-50;
-      @apply file:focus:shadow-secondary-400/20 file:ring-secondary-300 file:focus-within:ring-secondary-600 focus:outline-secondary-500;
+      @apply file:focus:shadow-secondary-support-300/20 file:ring-secondary-300 file:focus-within:ring-secondary-support-300 focus:outline-secondary-support-300;
       &:hover:not(:disabled):not([readonly])::file-selector-button {
         @apply bg-secondary-100;
       }
